--- a/ui/src/app/job/job.component.html
+++ b/ui/src/app/job/job.component.html
@@ -1,11 +1,20 @@
 <h2>New job form</h2>
 <form #jobForm="ngForm" (ngSubmit)="createJob(jobForm)">
+
   <label for="engineer">Engineer</label>
   <select name="engineer" required #engineer="ngModel" ngModel placeholder="Please select" [(ngModel)]="newJob.engineer">
     <option [ngValue]="undefined" selected>Please select</option>
     <option *ngFor="let engineer of engineers">{{engineer}}</option>
   </select>
   <small *ngIf="engineer.invalid">Please select an engineer</small>
+
+  <label for="customer">Customer</label>
+  <select name="customer" required #customer="ngModel" ngModel placeholder="Please select" [(ngModel)]="newJob.customerId">
+    <option [ngValue]="null">Please select</option>
+    <option *ngFor="let customer of this.customers|async"  [ngValue]="customer.customerId">{{customer.name}}</option>
+  </select>
+  <small *ngIf="customer.invalid">Please select a customer</small>
+
   <label for="when">When</label>
   <input type="date" name="when" ngModel required #when="ngModel" [(ngModel)]="newJob.when" />
   <small *ngIf="when.invalid">Please select a valid date</small>
@@ -17,6 +26,7 @@
   <thead>
     <tr>
       <th>Engineer</th>
+      <th>Customer</th>
       <th>When</th>
       <th></th>
     </tr>
@@ -24,6 +34,8 @@
   <tbody>
     <tr *ngFor="let job of jobs">
       <td>{{job.engineer}}</td>
+      <td *ngIf="!job.customer">Unknown</td>
+      <td *ngIf="job.customer">{{job.customer?.name}}</td>
       <td>{{job.when | date:'shortDate'}}</td>
       <td>
         <a [routerLink]="['/job', job.jobId]">Open</a>
@@ -31,3 +43,4 @@
     </tr>
   </tbody>
 </table>
+
